@@ -33,7 +33,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-public class TestDepublishRecordIdDao {
+class TestDepublishRecordIdDao {
 
   private static MorphiaDatastoreProvider provider;
   private static EmbeddedLocalhostMongo embeddedLocalhostMongo;
@@ -71,7 +71,7 @@ public class TestDepublishRecordIdDao {
     final String datasetId = Integer.toString(TestObjectFactory.DATASETID);
     final Set<String> setTest = Set.of("1001");
 
-    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest, DepublicationReason.UNKNOWN);
+    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest);
 
     assertEquals(1, provider.getDatastore().find(DepublishRecordId.class).count());
     assertEquals("1001",
@@ -84,7 +84,7 @@ public class TestDepublishRecordIdDao {
     final Set<String> setTest = Set.of("1008", "1009", "1010", "1011", "1012", "1013");
 
     Throwable exception = assertThrows(BadContentException.class,
-        () -> depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest, DepublicationReason.UNKNOWN));
+        () -> depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest));
 
     assertEquals(
         "Can't add these records: this would violate the maximum number of records per dataset.",
@@ -99,7 +99,7 @@ public class TestDepublishRecordIdDao {
     doReturn(6L).when(depublishRecordIdDao).countDepublishRecordIdsForDataset(datasetId);
 
     Throwable exception = assertThrows(BadContentException.class,
-        () -> depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest, DepublicationReason.UNKNOWN));
+        () -> depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, setTest));
 
     assertEquals(
         "Can't add these records: this would violate the maximum number of records per dataset.",
@@ -119,7 +119,7 @@ public class TestDepublishRecordIdDao {
         () -> depublishRecordIdDao.deletePendingRecordIds(datasetId, biggerThanAllowedSet));
 
     depublishRecordIdDao
-        .addRecords(setTest, datasetId, DepublicationStatus.PENDING_DEPUBLICATION, Instant.now(), DepublicationReason.UNKNOWN);
+        .addRecords(setTest, datasetId, DepublicationStatus.PENDING_DEPUBLICATION, Instant.now(), DepublicationReason.GENERIC);
     assertEquals(1, provider.getDatastore().find(DepublishRecordId.class).count());
 
     depublishRecordIdDao.deletePendingRecordIds(datasetId, setTest);
@@ -133,7 +133,7 @@ public class TestDepublishRecordIdDao {
     final Set<String> setTest = Set.of("1003");
 
     depublishRecordIdDao
-        .addRecords(setTest, datasetId, DepublicationStatus.DEPUBLISHED, Instant.now(), DepublicationReason.UNKNOWN);
+        .addRecords(setTest, datasetId, DepublicationStatus.DEPUBLISHED, Instant.now(), DepublicationReason.GENERIC);
     long result = depublishRecordIdDao.countSuccessfullyDepublishedRecordIdsForDataset(datasetId);
     assertEquals(1L, result);
   }
@@ -144,7 +144,7 @@ public class TestDepublishRecordIdDao {
     final Set<String> setTest = Set.of("1004", "1005");
 
     depublishRecordIdDao
-        .addRecords(setTest, datasetId, DepublicationStatus.PENDING_DEPUBLICATION, Instant.now(),DepublicationReason.UNKNOWN);
+        .addRecords(setTest, datasetId, DepublicationStatus.PENDING_DEPUBLICATION, Instant.now(), DepublicationReason.GENERIC);
     List<DepublishRecordIdView> find1004 = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
             SortDirection.ASCENDING, "1004");
@@ -154,7 +154,7 @@ public class TestDepublishRecordIdDao {
             SortDirection.ASCENDING, null);
 
     assertEquals(1, find1004.size());
-    assertEquals("1004", find1004.get(0).getRecordId());
+    assertEquals("1004", find1004.getFirst().getRecordId());
     assertEquals(2, findAll.size());
   }
 
@@ -173,7 +173,7 @@ public class TestDepublishRecordIdDao {
             DepublicationStatus.DEPUBLISHED, biggerThanAllowedSet));
 
     depublishRecordIdDao
-        .addRecords(setTest, datasetId, DepublicationStatus.DEPUBLISHED, Instant.now(), DepublicationReason.UNKNOWN);
+        .addRecords(setTest, datasetId, DepublicationStatus.DEPUBLISHED, Instant.now(), DepublicationReason.GENERIC);
     Set<String> result = depublishRecordIdDao.getAllDepublishRecordIdsWithStatus(datasetId,
         DepublishRecordIdSortField.DEPUBLICATION_STATE, SortDirection.ASCENDING,
         DepublicationStatus.DEPUBLISHED, setTest);
@@ -196,17 +196,17 @@ public class TestDepublishRecordIdDao {
 
     //Null depublication status
     assertThrows(IllegalArgumentException.class, () -> depublishRecordIdDao
-        .markRecordIdsWithDepublicationStatus(datasetId, recordIdsSet, null, date, DepublicationReason.UNKNOWN));
+        .markRecordIdsWithDepublicationStatus(datasetId, recordIdsSet, null, date, DepublicationReason.GENERIC));
 
     //Blank dataset id
     assertThrows(IllegalArgumentException.class, () -> depublishRecordIdDao
         .markRecordIdsWithDepublicationStatus(null, recordIdsSet,
-            DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.UNKNOWN));
+            DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.GENERIC));
 
     //Depublished status but date null
     assertThrows(IllegalArgumentException.class, () -> depublishRecordIdDao
         .markRecordIdsWithDepublicationStatus(datasetId, recordIdsSet,
-            DepublicationStatus.DEPUBLISHED, null, DepublicationReason.UNKNOWN));
+            DepublicationStatus.DEPUBLISHED, null, null));
   }
 
   @Test
@@ -217,7 +217,7 @@ public class TestDepublishRecordIdDao {
     Date date = Date.from(Instant.now());
 
     //Create recordIds
-    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsSet, DepublicationReason.UNKNOWN);
+    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsSet);
     //Check stored recordIds
     List<DepublishRecordIdView> findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -228,7 +228,7 @@ public class TestDepublishRecordIdDao {
     //Set to DEPUBLISHED
     depublishRecordIdDao
         .markRecordIdsWithDepublicationStatus(datasetId, null, DepublicationStatus.DEPUBLISHED,
-            date, DepublicationReason.UNKNOWN);
+            date, DepublicationReason.GENERIC);
     //Check stored recordIds
     findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -239,7 +239,7 @@ public class TestDepublishRecordIdDao {
             .equals(Date.from(depublishRecordIdView.getDepublicationDate()))));
     //Set to PENDING_DEPUBLICATION
     depublishRecordIdDao.markRecordIdsWithDepublicationStatus(datasetId, null,
-        DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.UNKNOWN);
+        DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.GENERIC);
     //Check stored recordIds
     findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -258,7 +258,7 @@ public class TestDepublishRecordIdDao {
     Date date = Date.from(Instant.now());
 
     //Create recordIds
-    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsToCreate, DepublicationReason.UNKNOWN);
+    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsToCreate);
     //Check stored recordIds
     List<DepublishRecordIdView> findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -268,7 +268,7 @@ public class TestDepublishRecordIdDao {
             .getDepublicationStatus() && null == depublishRecordIdView.getDepublicationDate()));
     //Set to DEPUBLISHED
     depublishRecordIdDao.markRecordIdsWithDepublicationStatus(datasetId, recordIdsToUpdate,
-        DepublicationStatus.DEPUBLISHED, date, DepublicationReason.UNKNOWN);
+        DepublicationStatus.DEPUBLISHED, date, DepublicationReason.GENERIC);
     //Check stored recordIds
     findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -279,7 +279,7 @@ public class TestDepublishRecordIdDao {
             .equals(Date.from(depublishRecordIdView.getDepublicationDate()))).count());
     //Set to PENDING_DEPUBLICATION
     depublishRecordIdDao.markRecordIdsWithDepublicationStatus(datasetId, recordIdsToUpdate,
-        DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.UNKNOWN);
+        DepublicationStatus.PENDING_DEPUBLICATION, date, DepublicationReason.GENERIC);
     //Check stored recordIds
     findAll = depublishRecordIdDao
         .getDepublishRecordIds(datasetId, 0, DepublishRecordIdSortField.DEPUBLICATION_STATE,
@@ -299,10 +299,10 @@ public class TestDepublishRecordIdDao {
     Date date = Date.from(Instant.now());
 
     //Create recordIds
-    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsToCreate, DepublicationReason.UNKNOWN);
+    depublishRecordIdDao.createRecordIdsToBeDepublished(datasetId, recordIdsToCreate);
     //Set to DEPUBLISHED
     depublishRecordIdDao.markRecordIdsWithDepublicationStatus(datasetId, recordIdsToUpdate,
-        DepublicationStatus.DEPUBLISHED, date, DepublicationReason.UNKNOWN);
+        DepublicationStatus.DEPUBLISHED, date, DepublicationReason.GENERIC);
 
     //Check stored recordIds
     List<DepublishRecordIdView> findAll = depublishRecordIdDao
@@ -324,9 +324,9 @@ public class TestDepublishRecordIdDao {
 
   @Test
   void getPageSizeTest() {
-    final DepublishRecordIdDao depublishRecordIdDao = new DepublishRecordIdDao(provider,
+    final DepublishRecordIdDao depublishRecordIdDaoWithPageSize = new DepublishRecordIdDao(provider,
         MAX_DEPUBLISH_RECORD_IDS_PER_DATASET, 3);
     verifyNoInteractions(provider);
-    assertEquals(3, depublishRecordIdDao.getPageSize());
+    assertEquals(3, depublishRecordIdDaoWithPageSize.getPageSize());
   }
 }
