@@ -35,7 +35,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
-public class TestDepublishRecordIdService {
+class TestDepublishRecordIdService {
 
   private static Authorizer authorizer;
   private static OrchestratorService orchestratorService;
@@ -68,11 +68,11 @@ public class TestDepublishRecordIdService {
 
   @Test
   void addRecordIdsToBeDepublishedTest() throws GenericMetisException {
-    depublishRecordIdService.addRecordIdsToBeDepublished(metisUserView, datasetId, "1002", DepublicationReason.UNKNOWN);
+    depublishRecordIdService.addRecordIdsToBeDepublished(metisUserView, datasetId, "1002");
 
     verify(authorizer, times(1)).authorizeWriteExistingDatasetById(metisUserView, datasetId);
     verify(depublishRecordIdService, times(1)).checkAndNormalizeRecordIds(any(), any());
-    verify(depublishRecordIdDao, times(1)).createRecordIdsToBeDepublished(any(), any(), any());
+    verify(depublishRecordIdDao, times(1)).createRecordIdsToBeDepublished(any(), any());
     verifyNoMoreInteractions(orchestratorService);
 
 
@@ -113,7 +113,7 @@ public class TestDepublishRecordIdService {
     // verify the result
     assertEquals(1, result.getListSize());
     assertEquals(1, result.getResults().size());
-    assertEquals(record.getRecordId(), result.getResults().get(0).getRecordId());
+    assertEquals(record.getRecordId(), result.getResults().getFirst().getRecordId());
   }
 
   @Test
@@ -125,7 +125,7 @@ public class TestDepublishRecordIdService {
         mockRecordIdsSeparateLines);
 
     //Do the actual call
-    WorkflowExecution result = depublishRecordIdService
+    depublishRecordIdService
         .createAndAddInQueueDepublishWorkflowExecution(metisUserView, datasetId, true, 1, mockRecordIdsSeparateLines,
             DepublicationReason.GENERIC);
 
